--- a/DOM/index.html
+++ b/DOM/index.html
@@ -17,6 +17,14 @@
           <a href="" class="site-nav__link">Контакти</a>
         </li>
     </ul>
+    <section class="hero">
+      <h1 class="hero__title">Зображення котика</h1>
+      <img
+        class="hero__image"
+        src="https://images.pexels.com/photos/57416/cat-sweet-kitty-animals-57416.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=480"
+        width="320"
+      />
+    </section>
     <script src="./script.js"></script>
 </body>
 </html>
