--- a/DOM/index.html
+++ b/DOM/index.html
@@ -6,25 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    <ul class="site-nav">
-        <li class="site-nav__item">
-          <a href="" class="site-nav__link">Про нас</a>
-        </li>
-        <li class="site-nav__item">
-          <a href="" class="site-nav__link">Портфоліо</a>
-        </li>
-        <li class="site-nav__item">
-          <a href="" class="site-nav__link">Контакти</a>
-        </li>
-    </ul>
-    <section class="hero">
-      <h1 class="hero__title">Зображення котика</h1>
-      <img
-        class="hero__image"
-        src="https://images.pexels.com/photos/57416/cat-sweet-kitty-animals-57416.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=480"
-        width="320"
-      />
-    </section>
+  <button type="submit" disabled class="js-button">
+    Зареєструватися як <span>Анонім</span>
+  </button>
+  <label>
+    Ім'я
+    <input type="text" class="js-input" />
+  </label>
+
+  <p>
+    <label>
+      <input type="checkbox" class="js-license" />
+      Приймаю умови договору
+    </label>
+  </p>
+
+  <button type="submit" disabled class="js-button">
+    Зареєструватися як <span>Анонім</span>
+  </button>
     <script src="./script.js"></script>
 </body>
 </html>
