--- a/DOM-hm/index.html
+++ b/DOM-hm/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #gallery {
+            display: flex;
+            gap: 10px;
+            list-style: none;
+            padding: 0;
+        }
+        #gallery li img {
+            width: 200px;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <input type="text" id="textInput" placeholder="Введіть текст">
+    <!-- <input type="text" id="textInput" placeholder="Введіть текст">
     <button id="myButton">Натисніть</button>
     <h2>Зображення</h2>
     <a id="myLink" href="https://old-site.com">
@@ -16,13 +28,45 @@
         <li id="firstItem">Старий текст</li>
         <li>Елемент 2</li>
         <li>Елемент 3</li>
+    </ul> -->
+
+
+
+
+
+    <ul id="categories">
+        <li class="item">
+            <h2>Тварини</h2>
+            <ul>
+                <li>Кіт</li>
+                <li>Хом'як</li>
+                <li>Кінь</li>
+                <li>Папуга</li>
+            </ul>
+        </li>
+        <li class="item">
+            <h2>Продукти</h2>
+            <ul>
+                <li>Хліб</li>
+                <li>Петрушка</li>
+                <li>Сир</li>
+            </ul>
+        </li>
+        <li class="item">
+            <h2>Технології</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Node</li>
+            </ul>
+        </li>
     </ul>
 
+    <ul id="ingredients"></ul>
 
-
-
-
-
+    <ul id="gallery"></ul>
 
     <script src="./script.js"></script>
 </body>
