--- a/foot/index.html
+++ b/foot/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Футбол</h2>
+    <!-- <h2>Футбол</h2>
     <div class="field">
       <img src="/football.png" alt="М'яч" class="ball" id="ball">
-    </div>
+    </div> -->
   <script src="script.js"></script>
 </body>
 </html>
