--- a/modal/index.html
+++ b/modal/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <title>Найбільше число</title>
+  <!-- <title>Найбільше число</title>
   <div class="container">
   <h2>Введіть 3 числа</h2>
   <div>
@@ -16,7 +16,7 @@
     <input type="number" id="num3" placeholder="Введіть число">
   </div>
   <div id="result">Найбільше число, яке ви ввели - (число)</div>
-  </div>
+  </div> -->
 
   <script src="script.js"></script>
 </body>
