--- a/lodash/index.html
+++ b/lodash/index.html
@@ -7,6 +7,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Подія mousemove -->
+    <p class="js-coords">Кількість викликів onMouseMove: 0</p>
+
+    <hr />
+    <!-- Подія input -->
+    <input type="text" class="js-input" />
+    <p class="js-output">Кількість викликів onInputChange: 0</p>
   <script src="script.js"></script>
+  <script src="
+https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js
+"></script>
 </body>
 </html>
