--- a/lodash/index.html
+++ b/lodash/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,11 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Подія mousemove -->
     <p class="js-coords">Кількість викликів onMouseMove: 0</p>
 
     <hr />
-    <!-- Подія input -->
     <input type="text" class="js-input" />
     <p class="js-output">Кількість викликів onInputChange: 0</p>
   <script src="script.js"></script>
@@ -19,4 +17,4 @@
 https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js
 "></script>
 </body>
-</html>
+</html> -->
